--- a/history.html
+++ b/history.html
@@ -7,24 +7,29 @@
     <link rel="stylesheet" href="history.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 
-</head>
-<div class="header-top">
-  <div class="container-fluid"> <!-- Changed to container-fluid for full width -->
-    <div class="row">
-      <div class="col-12 col-md-6"> <!-- Responsive columns -->
-        <span>CMU BUGGY ALUMNI ASSOCIATION</span>
-      </div>
-      <div class="col-12 col-md-6 text-md-right race-info"> <!-- Text alignment changes on medium devices -->
-        <span>Race Day in 2024: Apr 12 - 13</span>
+    <div class="header-top">
+      <div class="container-fluid">
+        <div class="row">
+          
+          <div class="col-12 col-md-6">
+            <span>CMU BUGGY ALUMNI ASSOCIATION</span>
+            <div class = "mobile-only">
+              <img src="images/shield-in-circle.svg" alt="Small Logo" style="height: 30px;">
+              <span>BAA</span>
+            </div>
+            <!-- No separate span for 'BAA', we will use CSS to inject this content -->
+          </div>
+          <div class="col-12 col-md-6 text-md-right race-info">
+            <span>Race Day in 2024: Apr 12 - 13</span>
+          </div>
+        </div>
       </div>
     </div>
-  </div>
-</div>
   
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light">
   <div class="container-fluid"> <!-- Changed to container-fluid -->
     <a class="navbar-brand" href="index.html">
-      <img src="images/shield-in-circle.svg" alt="Logo" height="100" class="img-fluid"> <!-- img-fluid for responsive image -->
+      <img class = "desk-top-view" src="images/shield-in-circle.svg" alt="Logo" class="img-fluid"> <!-- img-fluid for responsive image -->
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -167,5 +172,52 @@
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.7.3/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+  <footer class="footer">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4 col-12 text-center text-md-left mb-3 mb-md-0">
+          <!-- Social icons for all sizes -->
+          <a href="your-facebook-link" class="social-icon"><img src="images/facebook.jpg" height = 30px width = 30px alt="Facebook"></a>
+          <a href="your-youtube-link" class="social-icon"><img src="images/youtube.jpg" height = 30px width = 30px alt="YouTube"></a>
+          <a href="your-rss-link" class="social-icon"><img src="images/rss.jpg"height = 30px width = 30px alt="RSS"></a>
+          <a href="your-twitter-link" class="social-icon"><img src="images/twitter.jpg" height = 30px width = 30px alt="Twitter"></a>
+          <a href="your-instagram-link" class="social-icon"><img src="images/insta.jpg" height = 30px width = 30px alt="Instagram"></a>
+          <a href="your-spotify-link" class="social-icon"><img src="images/spotify.jpg" height = 30px width = 30px alt="Spotify"></a>
+          <!-- Contact email shown on all sizes -->
+          <p class="contact-email">Please contact <a href="mailto:admin@cmubuggy.org">admin@cmubuggy.org</a> with any questions or follow us on social media!</p>
+        </div>
+        <div class="col-md-8 col-12">
+          <div class="row">
+            <div class="col-md-4 col-6 text-center text-md-left mb-3 mb-md-0 mobileNotDisplay">
+              <a href="#" class="footer-link">Rolls Reports</a>
+              <a href="#" class="footer-link">Donation</a>
+              <a href="#" class="footer-link">Sweepstake Rules</a>
+              <a href="#" class="footer-link">How to Build a Buggy</a>
+            </div>
+            <div class="col-md-4 col-6 text-center text-md-left mb-3 mb-md-0 mobileNotDisplay">
+              <a href="#" class="footer-link">BAA Membership</a>
+              <a href="#" class="footer-link">Sweepstake Committee</a>
+              <a href="#" class="footer-link">BAA Endowment Grant Application and Projects</a>
+            </div>
+            <div class="col-md-4 col-12 text-center text-md-left mb-3 mb-md-0">
+              <a href="#" class="footer-link">FAQ</a>
+              <a href="#" class="footer-link">Accessibility</a>
+              <a href="#" class="footer-link">Privacy Policy</a>
+              <a href="#" class="footer-link">Code of Conduct</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-12 text-center">
+          <p class="copyright">CMU Buggy Alumni Association © 2008–2023</p>
+        </div>
+      </div>
+    </div>
+  </footer>
+  
+
+
   </body>
   </html>
