added footer to homepage

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 			id="racedayCarousel"
 			class="carousel slide"
 			data-bs-ride="carousel"
-			data-bs-interval="100000"
+			data-bs-interval="10000"
 		>
 			<div class="carousel-indicators">
 				<button
@@ -606,18 +606,18 @@
 						</div>
 					</div>
 					<!-- membership types -->
-                    <div class="col-lg-4">
-					<div class="col-12 membershipsContainer gy-2">
-						<div class="col-12">
-							<p>Annual Membership –– $20+</p>
-							<button class="outsetBtn">Get Annual Membership</button>
-						</div>
-						<div class="col-12">
-							<p>Golden Goose Lifetime Membership –– $1,000+</p>
-							<button class="outsetBtn">Get Lifetime Membership</button>
+					<div class="col-lg-4">
+						<div class="col-12 membershipsContainer gy-2">
+							<div class="col-12">
+								<p>Annual Membership –– $20+</p>
+								<button class="outsetBtn">Get Annual Membership</button>
+							</div>
+							<div class="col-12">
+								<p>Golden Goose Lifetime Membership –– $1,000+</p>
+								<button class="outsetBtn">Get Lifetime Membership</button>
+							</div>
 						</div>
 					</div>
-                </div>
 				</div>
 			</div>
 
@@ -757,6 +757,94 @@
 			</div>
 			<!-- divider -->
 		</div>
+
+		<footer class="footer">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-4 col-12 text-center text-md-left mb-3 mb-md-0">
+						<!-- Social icons for all sizes -->
+						<a href="your-facebook-link" class="social-icon"
+							><img
+								src="images/facebook.jpg"
+								height="30px"
+								width="30px"
+								alt="Facebook"
+						/></a>
+						<a href="your-youtube-link" class="social-icon"
+							><img
+								src="images/youtube.jpg"
+								height="30px"
+								width="30px"
+								alt="YouTube"
+						/></a>
+						<a href="your-rss-link" class="social-icon"
+							><img src="images/rss.jpg" height="30px" width="30px" alt="RSS"
+						/></a>
+						<a href="your-twitter-link" class="social-icon"
+							><img
+								src="images/twitter.jpg"
+								height="30px"
+								width="30px"
+								alt="Twitter"
+						/></a>
+						<a href="your-instagram-link" class="social-icon"
+							><img
+								src="images/insta.jpg"
+								height="30px"
+								width="30px"
+								alt="Instagram"
+						/></a>
+						<a href="your-spotify-link" class="social-icon"
+							><img
+								src="images/spotify.jpg"
+								height="30px"
+								width="30px"
+								alt="Spotify"
+						/></a>
+						<!-- Contact email shown on all sizes -->
+						<p class="contact-email">
+							Please contact
+							<a href="mailto:admin@cmubuggy.org">admin@cmubuggy.org</a> with
+							any questions or follow us on social media!
+						</p>
+					</div>
+					<div class="col-md-8 col-12">
+						<div class="row">
+							<div
+								class="col-md-4 col-6 text-center text-md-left mb-3 mb-md-0 mobileNotDisplay"
+							>
+								<a href="#" class="footer-link">Rolls Reports</a>
+								<a href="#" class="footer-link">Donation</a>
+								<a href="#" class="footer-link">Sweepstake Rules</a>
+								<a href="#" class="footer-link">How to Build a Buggy</a>
+							</div>
+							<div
+								class="col-md-4 col-6 text-center text-md-left mb-3 mb-md-0 mobileNotDisplay"
+							>
+								<a href="#" class="footer-link">BAA Membership</a>
+								<a href="#" class="footer-link">Sweepstake Committee</a>
+								<a href="#" class="footer-link"
+									>BAA Endowment Grant Application and Projects</a
+								>
+							</div>
+							<div
+								class="col-md-4 col-12 text-center text-md-left mb-3 mb-md-0"
+							>
+								<a href="#" class="footer-link">FAQ</a>
+								<a href="#" class="footer-link">Accessibility</a>
+								<a href="#" class="footer-link">Privacy Policy</a>
+								<a href="#" class="footer-link">Code of Conduct</a>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-12 text-center">
+						<p class="copyright">CMU Buggy Alumni Association © 2008–2023</p>
+					</div>
+				</div>
+			</div>
+		</footer>
 
 		<!-- Bootstrap Popper and JS link -->
 		<script
