changed the style of history from center-aligned to left-aligned

--- a/history.html
+++ b/history.html
@@ -36,13 +36,13 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav ml-auto">
-          <li class="nav-item active">
+          <li class="nav-item">
             <a class="nav-link" href="#">News</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="whatisbuggy.html">What is Buggy</a>
           </li>
-          <li class="nav-item dropdown nav-fill">
+          <li class="nav-item dropdown nav-fill active">
             <a class="nav-link dropdown-toggle" href="history.html" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               History
             </a>
@@ -62,10 +62,10 @@
         </ul>
       </div>
     </div>
-
   </nav>
-  <!-- Home -> History section-->
-  <div class="breadcrumb-container container-fluid"> <!-- Changed to container-fluid -->
+
+  <!-- Home -> Old version History section-->
+  <!-- <div class="breadcrumb-container container-fluid"> 
     <div class="row">
       <div class="col-12">
         <span class="navgoingto"><a class="homelink" href="index.html">Home</a></span>
@@ -74,12 +74,32 @@
     </div>
   </div>
 
+
   <div class="header">
     <div class="container">
       <h1 class="historyheader">The History of Buggy</h1>
     </div>
+  </div> -->
+
+
+  <!-- Home -> New version History section-->
+  <div class="header">
+    <div class="container">
+      <div class="breadcrumb-container container-fluid"> <!-- Changed to container-fluid -->
+        <div class="row">
+          <div class="col-12">
+            <span class="navgoingto"><a class="homelink" href="index.html">Home</a>
+            > History</span>
+          </div>
+        </div>
+      </div>
+      <h1 class="historyheader">The History of Buggy</h1>
+    </div>
   </div>
+    
   
+  
+    <!-- Main content: record starts here -->
   <div class="record-section">
     <div class="container">
       <p>Records / Mens: 2:02.16 / Womens: 2:23.27 / All Gender: 2:45.58</p>
