what is buggy draft4

--- a/whatisbuggy.html
+++ b/whatisbuggy.html
@@ -68,8 +68,6 @@
       </div>
     </div>
   </nav>
-  
-  
 
 
       <!-- Home -> What is Buggy section-->
@@ -137,7 +135,7 @@
     <!-- This is What is Buggy Grid (left) and When is it (right) -->
     <div class="top_container">
         <div class="whatIsBuggy">
-            <p class="size26">What is Buggy</p>
+            <p class="top_intro">What is Buggy</p>
             <p>Buggy (also called Sweepstakes) is a race held annually since 1920
                 at Carnegie Mellon. Teams of five athletes (the pushers) push an
                 un-motorized vehicle (a buggy) containing a driver around a 0.84 
@@ -149,10 +147,8 @@
             <p><br></p>
         </div>
       
-
-        
         <div class="whenIsIt">
-            <p class="size26">When is it</p>
+            <p class="top_intro">When is it</p>
             <p>Raceday: CMU's Spring Carnival, generally in mid-April on Friday and Saturday 8am - noon.</p>
             <p>Practice: Sept-Nov and Feb-April on Weekends Sunrise - 9am.</p>
         </div>
@@ -164,9 +160,9 @@
     <!-- Begin your buggy journey  -->
     <div class="middle_container">
       <hr class="separation">
-        <p class="size26">Begin Your Buggy Journey</p>
-        <div class="video">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/jYU8GYxAbXI?si=oKvQcwC_44V2iap-"
+        <p class="top_intro">Begin Your Buggy Journey</p>
+        <div>
+          <iframe class="video" src="https://www.youtube.com/embed/jYU8GYxAbXI?si=oKvQcwC_44V2iap-"
             title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media;
             gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> 
         </div>
@@ -176,7 +172,7 @@
             <div class="card1 bg-cmu">
                 <div class="card-body">
                 <h5 class="card-title" style="color: white">JOIN A TEAM</h5>
-                <p class="card-text" style="color: white"><u>“Check out our current team list!”</u></p>
+                <p class="card_text"><u>“Check out our current team list!”</u></p>
                 </div>
             </div>
         </div>
@@ -185,7 +181,7 @@
             <div class="card1 bg-cmu">
                 <div class="card-body">
                 <h5 class="card-title" style="color: white">START A TEAM</h5>
-                <p class="card-text" style="color: white"><u>“All things you want to know before starting your own team!”</u></p>
+                <p class="card_text"><u>“All things you want to know before starting your own team!”</u></p>
                 </div>
             </div>
         </div>  
@@ -193,7 +189,7 @@
             <div class="card1 bg-cmu">
                 <div class="card-body">
                 <h5 class="card-title" style="color: white">STARTER KIT</h5>
-                <p class="card-text" style="color: white"><u>“Check our information for people who have never tried buggy before!”</u></p>
+                <p class="card_text"><u>“Check our information for people who have never tried buggy before!”</u></p>
                 </div>
             </div>
         </div> 
@@ -206,7 +202,7 @@
     <!-- Helpful Resources -->
     <div class="third_container">
       <hr class="separation">
-        <p class="size26">Helpful Resources</p>
+        <p class="top_intro">Helpful Resources</p>
         <div class="row">
         <div class="col-12 col-md-4" id="card_separation">
             <div class="card2">
