--- a/whatisbuggy.html
+++ b/whatisbuggy.html
@@ -72,7 +72,7 @@
       <!-- Home -> What is Buggy section-->
       <div class="header">
         <div class="container">
-          <div class="breadcrumb-container container-fluid"> Changed to container-fluid
+          <div class="breadcrumb-container container-fluid">
             <div class="row">
               <div class="col-12">
                 <span class="navgoingto"><a class="homelink" href="index.html">Home</a>
