--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 				</div>
 				<div class="carouselBottomBtns row gx-3">
 					<div class="col carouselBtn">
-						<button class="btn" type="button">Course Info</button>
+						<button class="btn" type="button">Course Map</button>
 					</div>
 					<div class="col carouselBtn">
 						<button class="btn" type="button">Leaderboard</button>
@@ -287,72 +287,72 @@
 							</table>
 						</div>
 					</div>
+				
+				<!-- </div> -->
+				<div class="dividerContainer col-12">
+					<div class="divider"></div>
+				</div>
 
-					<!-- </div> -->
-					<div class="dividerContainer col-12">
-						<div class="divider"></div>
+				<!-- schedule at a glance -->
+				<!-- <div class="container-fluid col-md-4 leaderboardNSchedule"> -->
+				<div class="col-12 col-lg col-lg-4 schedule">
+					<div class="row">
+						<h2 class="col-12">Schedule at a Glance</h2>
+						<a class="col-12">see Spring Carnival Schedule</a>
+						<a class="col-12">see full Buggy schedule</a>
 					</div>
-
-					<!-- schedule at a glance -->
-					<!-- <div class="container-fluid col-md-4 leaderboardNSchedule"> -->
-					<div class="col-12 col-lg col-lg-4 schedule">
-						<div class="row">
-							<h2 class="col-12">Schedule at a Glance</h2>
-							<a class="col-12">see Spring Carnival Schedule</a>
-							<a class="col-12">see full Buggy schedule</a>
+					<div class="schedule">
+						<h3>Thursday, April 13</h3>
+						<div class="horizontalCards row">
+							<div class="col-5 col-lg-5 cardImg">
+								<img src="./images/buggyDesigns.jpeg" alt="buggy designs" />
+							</div>
+							<div class="customCardBody col col-lg">
+								<p class="scheduleTitle">Buggy Showcase</p>
+								<p class="scheduleLocation">
+									Weigand Gym (CUC 1st Floor) @ Noon
+								</p>
+								<p class="scheduleDescription">
+									View the latest buggy designs, talk with the teams, enjoy
+									kid-friendly buggy activities, and vote...
+								</p>
+							</div>
 						</div>
-						<div class="schedule">
-							<h3>Thursday, April 13</h3>
-							<div class="horizontalCards row">
-								<div class="col-5 col-lg-5 cardImg">
-									<img src="./images/buggyDesigns.jpeg" alt="buggy designs" />
-								</div>
-								<div class="customCardBody col col-lg">
-									<p class="scheduleTitle">Buggy Showcase</p>
-									<p class="scheduleLocation">
-										Weigand Gym (CUC 1st Floor) @ Noon
-									</p>
-									<p class="scheduleDescription">
-										View the latest buggy designs, talk with the teams, enjoy
-										kid-friendly buggy activities, and vote...
-									</p>
-								</div>
+						<div class="horizontalCards row">
+							<div class="col-5 col-lg-5 cardImg">
+								<img
+									src="./images/randomFoodPexels.jpg"
+									alt="food image taken from Pexels.com"
+								/>
 							</div>
-							<div class="horizontalCards row">
-								<div class="col-5 col-lg-5 cardImg">
-									<img
-										src="./images/randomFoodPexels.jpg"
-										alt="food image taken from Pexels.com"
-									/>
-								</div>
-								<div class="customCardBody col">
-									<p class="scheduleTitle">Buggy Kickoff Dinner</p>
-									<p class="scheduleLocation">Fuel & Fuddle @ 8am</p>
-									<p class="scheduleDescription">
-										Come join the Buggy Alumni Association for our annual
-										kickoff dinner! Connect and catch up with...
-									</p>
-								</div>
+							<div class="customCardBody col">
+								<p class="scheduleTitle">Buggy Kickoff Dinner</p>
+								<p class="scheduleLocation">Fuel & Fuddle @ 8am</p>
+								<p class="scheduleDescription">
+									Come join the Buggy Alumni Association for our annual kickoff
+									dinner! Connect and catch up with...
+								</p>
 							</div>
-							<div class="horizontalCards row disappearOnLg">
-								<div class="col-5 col-lg-5 cardImg">
-									<img
-										src="./images/auction.jpg"
-										alt="food image taken from Pexels.com"
-									/>
-								</div>
-								<div class="customCardBody col">
-									<p class="scheduleTitle">Prelim Lead Truck Auction</p>
-									<p class="scheduleLocation">Online @ Until 11pm ET</p>
-									<p class="scheduleDescription">
-										Bid online on your favorite prelim heats for your chance at
-										the...
-									</p>
-								</div>
+						</div>
+						<div class="horizontalCards row disappearOnLg">
+							<div class="col-5 col-lg-5 cardImg">
+								<img
+									src="./images/auction.jpg"
+									alt="food image taken from Pexels.com"
+								/>
+							</div>
+							<div class="customCardBody col">
+								<p class="scheduleTitle">Prelim Lead Truck Auction</p>
+								<p class="scheduleLocation">Online @ Until 11pm ET</p>
+								<p class="scheduleDescription">
+									Bid online on your favorite prelim heats for your chance at
+									the...
+								</p>
 							</div>
 						</div>
 					</div>
 				</div>
+			</div>
 			</div>
 			<!-- divider -->
 			<div class="dividerContainer">
