mobile logo bar link

--- a/whatisbuggy.html
+++ b/whatisbuggy.html
@@ -16,10 +16,12 @@
           
           <div class="col-12 col-md-6">
             <span>CMU BUGGY ALUMNI ASSOCIATION</span>
+            <a href="index.html">
             <div class = "mobile-only">
               <img src="images/shield-in-circle.svg" alt="Small Logo" style="height: 30px;">
               <span>BAA</span>
             </div>
+            </a>
             <!-- No separate span for 'BAA', we will use CSS to inject this content -->
           </div>
           <div class="col-12 col-md-6 text-md-right race-info">
